Modified the transaction logic to support deduction of transaction costs
